env_config/tests/ui/env_config_attribute_literal.stderr
error: attribute only supports these named args: prefix
 --> tests/ui/env_config_attribute_literal.rs:3:14
  |
3 | #[env_config("MY_LOVELY_PREFIX")]
  |              ^^^^^^^^^^^^^^^^^^
